@@ -68,7 +68,7 @@ import static org.petitparser.parser.primitive.CharacterParser.word;
 
 
 public class RecordParserDefinition extends GrammarDefinition {
-    private static final Logger logger = LogManager.getLogger(RecordParserDefinition.class);
+    protected static final Logger logger = LogManager.getLogger();
 
     // legacy mode to let validation pass on legacy records until they are fixed
     private final boolean legacy;
@@ -233,10 +233,16 @@ public class RecordParserDefinition extends GrammarDefinition {
         def("DEPRECATED",
             StringParser.of("DEPRECATED")
                 .seq(ref("tagsep"))
+                .seq(Token.NEWLINE_PARSER.not())
+                .seq(
+                    CharacterParser.any().plusLazy(Token.NEWLINE_PARSER)
+                        .flatten()
+                )
+                .pick(3)
+                .seq(Token.NEWLINE_PARSER)
                 .seq(CharacterParser.any().star()
                     .flatten()
                 )
-                .pick(2)
 //			.map((List<?> value) -> {
 //				System.out.println(value);
 //				return value;
@@ -540,8 +546,8 @@ public class RecordParserDefinition extends GrammarDefinition {
                         )
                         .map((List<?> value) -> {
                             List<String> result = new ArrayList<>();
-                            if (value.get(0) != null) {
-                                result.add((String) value.get(0));
+                            if (value.getFirst() != null) {
+                                result.add((String) value.getFirst());
                             }
                             if (value.get(1) != null) {
                                 List<?> sublist = (List<?>) value.get(1);
@@ -807,7 +813,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(ch_link_subtag)
                 .seq(Token.NEWLINE_PARSER.not()).pick(2)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER)
                 .pick(0)
                 .plus()
@@ -884,7 +890,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(CharacterParser.any().plusLazy(CharacterParser.whitespace()).flatten())
                 .seq(CharacterParser.whitespace()).pick(3)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER)
                 .pick(0)
                 .plus()
@@ -973,7 +979,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(ref("ac_instrument_type_ionisation"))
                 .seq(ref("ac_instrument_type_analyzer"))
                 .map((List<String> value) -> {
-                    if (value.get(0) == null) value.remove(0);
+                    if (value.getFirst() == null) value.removeFirst();
                     return String.join("-", value);
                 })
         );
@@ -1188,7 +1194,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         )
                 )
                 .seq(Token.NEWLINE_PARSER).pick(2)
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .plus()
 //                .map((Object value) -> {
 //                    System.out.println(value);
@@ -1271,7 +1277,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 )
                 .seq(Token.NEWLINE_PARSER.not()).pick(2)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER).pick(0)
                 .plus()
 //                .map((Object value) -> {
@@ -1423,7 +1429,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         )
                 )
                 .seq(Token.NEWLINE_PARSER).pick(2)
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .plus()
 //                .map((Object value) -> {
 //                    System.out.println(value);
@@ -1461,7 +1467,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 .seq(ref("ms_data_processing_subtag"))
                 .seq(Token.NEWLINE_PARSER.not()).pick(2)
                 .seq(CharacterParser.any().plusLazy(Token.NEWLINE_PARSER).flatten())
-                .map((List<String> value) -> Pair.of(value.get(0).trim(), value.get(1)))
+                .map((List<String> value) -> Pair.of(value.getFirst().trim(), value.get(1)))
                 .seq(Token.NEWLINE_PARSER).pick(0)
                 .plus()
 //                .map((Object value) -> {
@@ -1506,7 +1512,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         .trim(CharacterParser.of(' '))
                         .plus()
                         .map((List<String> value) -> {
-                            value.add(0,"m/z");
+                            value.addFirst("m/z");
                             return value;
                         })
                 )
@@ -1524,7 +1530,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                                 .plus()
                         )
                         .map((List<?> value) -> {
-                            BigDecimal mz = new BigDecimal((String) value.get(0));
+                            BigDecimal mz = new BigDecimal((String) value.getFirst());
                             List<String> annotations = ((List<?>) value.get(1)).stream()
                                 .map(Object::toString)
                                 .collect(Collectors.toList());
@@ -1571,7 +1577,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                         .seq(
                             ref("uint_primitive")
                         )
-                        .map((List<String> value) -> Triple.of(new BigDecimal(value.get(0)),
+                        .map((List<String> value) -> Triple.of(new BigDecimal(value.getFirst()),
                             new BigDecimal(value.get(1)),
                             Integer.parseInt(value.get(2))))
                         .seq(Token.NEWLINE_PARSER)
@@ -1593,98 +1599,98 @@ public class RecordParserDefinition extends GrammarDefinition {
     }
 
     private Record setRECORD_TITLE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.RECORD_TITLE1((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.RECORD_TITLE1((String) value.getLast());
         return record;
     }
 
     private Record setDATE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.DATE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.DATE((String) value.getLast());
         return record;
     }
 
     private Record setAUTHORS(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AUTHORS((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AUTHORS((String) value.getLast());
         return record;
     }
 
     private Record setLICENSE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.LICENSE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.LICENSE((String) value.getLast());
         return record;
     }
 
     private Record setCOPYRIGHT(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.COPYRIGHT((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.COPYRIGHT((String) value.getLast());
         return record;
     }
 
     private Record setPUBLICATION(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.PUBLICATION((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.PUBLICATION((String) value.getLast());
         return record;
     }
 
     private Record setPROJECT(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.PROJECT((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.PROJECT((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCOMMENT(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.COMMENT((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.COMMENT((List<String>) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCH_NAME(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.CH_NAME((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.CH_NAME((List<String>) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCH_COMPOUND_CLASS(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.CH_COMPOUND_CLASS((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.CH_COMPOUND_CLASS((List<String>) value.getLast());
         return record;
     }
 
     private Record setCH_FORMULA(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_FORMULA((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_FORMULA((String) value.getLast());
         return record;
     }
 
     private Record setCH_EXACT_MASS(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_EXACT_MASS((BigDecimal) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_EXACT_MASS((BigDecimal) value.getLast());
         return record;
     }
 
     private Record setCH_SMILES(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_SMILES((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_SMILES((String) value.getLast());
         return record;
     }
 
     private Record setCH_IUPAC(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.CH_IUPAC((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.CH_IUPAC((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setCH_LINK(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) {
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) {
             LinkedHashMap<String, String> map = new LinkedHashMap<>();
-            for (Pair<String, String> pair : (List<Pair<String, String>>) value.get(value.size()-1)) {
+            for (Pair<String, String> pair : (List<Pair<String, String>>) value.getLast()) {
                 map.put(pair.getKey(), pair.getValue());
             }
             record.CH_LINK(map);
@@ -1693,23 +1699,23 @@ public class RecordParserDefinition extends GrammarDefinition {
     }
 
     private Record setSP_SCIENTIFIC_NAME(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.SP_SCIENTIFIC_NAME((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.SP_SCIENTIFIC_NAME((String) value.getLast());
         return record;
     }
 
     private Record setSP_LINEAGE(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.SP_LINEAGE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.SP_LINEAGE((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setSP_LINK(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) {
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) {
             LinkedHashMap<String, String> map = new LinkedHashMap<>();
-            for (Pair<String, String> pair : (List<Pair<String, String>>) value.get(value.size()-1)) {
+            for (Pair<String, String> pair : (List<Pair<String, String>>) value.getLast()) {
                 map.put(pair.getKey(), pair.getValue());
             }
             record.SP_LINK(map);
@@ -1719,35 +1725,36 @@ public class RecordParserDefinition extends GrammarDefinition {
 
     @SuppressWarnings("unchecked")
     private Record setSP_SAMPLE(List<?> value) {
-        Record record = (Record) value.get(0);
-        if (value.get(value.size()-1) != null) record.SP_SAMPLE((List<String>) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        if (value.getLast() != null) record.SP_SAMPLE((List<String>) value.getLast());
         return record;
     }
 
     private Record setAC_INSTRUMENT(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_INSTRUMENT((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_INSTRUMENT((String) value.getLast());
         return record;
     }
 
     private Record setAC_INSTRUMENT_TYPE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_INSTRUMENT_TYPE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_INSTRUMENT_TYPE((String) value.getLast());
         return record;
     }
 
     private Record setAC_MASS_SPECTROMETRY_MS_TYPE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_MASS_SPECTROMETRY_MS_TYPE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_MASS_SPECTROMETRY_MS_TYPE((String) value.getLast());
         return record;
     }
 
     private Record setAC_MASS_SPECTROMETRY_ION_MODE(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.AC_MASS_SPECTROMETRY_ION_MODE((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.AC_MASS_SPECTROMETRY_ION_MODE((String) value.getLast());
         return record;
     }
 
+    @SuppressWarnings("unchecked")
     private Record setAC_MASS_SPECTROMETRY(List<?> value) {
         Record record = (Record) value.getFirst();
         if (value.getLast() != null) {
@@ -1764,6 +1771,7 @@ public class RecordParserDefinition extends GrammarDefinition {
         return record;
     }
 
+    @SuppressWarnings("unchecked")
     private Record setAC_CHROMATOGRAPHY(List<?> value) {
         Record record = (Record) value.getFirst();
         if (value.getLast() != null) {
@@ -1815,14 +1823,14 @@ public class RecordParserDefinition extends GrammarDefinition {
     }
 
     private Record setPK_SPLASH(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.PK_SPLASH((String) value.get(value.size()-1));
+        Record record = (Record) value.getFirst();
+        record.PK_SPLASH((String) value.getLast());
         return record;
     }
 
     @SuppressWarnings("unchecked")
     private Record setPK_ANNOTATION(List<?> value) {
-        Record record = (Record) value.get(0);
+        Record record = (Record) value.getFirst();
         if (value.get(1) != null) {
             record.PK_ANNOTATION_HEADER((List<String>) ((List<?>) value.get(1)).get(0));
             for (Pair<BigDecimal, List<String>> annotationLine : (List<Pair<BigDecimal, List<String>>>) ((List<?>) value.get(1)).get(1)) {
@@ -1834,17 +1842,19 @@ public class RecordParserDefinition extends GrammarDefinition {
 
     @SuppressWarnings("unchecked")
     private Record setPK_PEAK(List<?> value) {
-        Record record = (Record) value.get(0);
+        Record record = (Record) value.getFirst();
         for (Triple<BigDecimal, BigDecimal, Integer> peak : (List<Triple<BigDecimal, BigDecimal, Integer>>) value.get(2)) {
             record.PK_PEAK_ADD_LINE(peak);
         }
         return record;
     }
 
+    @SuppressWarnings("unchecked")
     private Record setDEPRECATED(List<?> value) {
-        Record record = (Record) value.get(0);
-        record.DEPRECATED(true);
-        record.DEPRECATED_CONTENT((String) value.get(1));
+        Record record = (Record) value.getFirst();
+        record.isDepricated(true);
+        record.DEPRECATED( ((List<String>)value.getLast()).get(0));
+        record.DEPRECATED_CONTENT( ((List<String>)value.getLast()).get(2));
         return record;
     }
 
@@ -1959,9 +1969,7 @@ public class RecordParserDefinition extends GrammarDefinition {
                 }
                 // check for matching InChIKey in CH$LINK
                 if (InChiKeyFromCH_LINK != null && !InChiKeyFromCH_LINK.equals(InChiKeyFromCH_IUPAC)) {
-                    logger.error("InChIKey generated from InChI string in \"CH$IUPAC\" field does not match InChIKey in \"CH$LINK\".\n"
-                        + "CH$LINK: INCHIKEY:  " +InChiKeyFromCH_LINK + "\n"
-                        + "InChIKey generated: " + InChiKeyFromCH_IUPAC);
+                    logger.error("InChIKey generated from InChI string in \"CH$IUPAC\" field does not match InChIKey in \"CH$LINK\".\nCH$LINK: INCHIKEY:  {}\nInChIKey generated: {}", InChiKeyFromCH_LINK, InChiKeyFromCH_IUPAC);
                     return context.failure("InChIKey generated from InChI string in \"CH$IUPAC\" field does not match InChIKey in \"CH$LINK\".\n"
                         + "CH$LINK: INCHIKEY:  " + InChiKeyFromCH_LINK + "\n"
                         + "InChIKey generated: " + InChiKeyFromCH_IUPAC);
